[package]
name = "image_editor"
version = "0.1.0"
authors = ["Nadezhda Pandelieva <nadezhdapandelieva@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
image = "0.23.14"
serde = { version = "1", features = ["derive"], optional = true }
rfd = "0.7.0"

[features]
default = []
persistence = ["eframe/persistence", "serde"] 

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]


